Added Reminder Reserved Attributes (#531)